# cpp

./: .gitignore
Module 24/Birthday/: CMakeLists.txt  main.cpp
Module 24/Kurator/: CMakeLists.txt  main.cpp
Module 24/Timer/: CMakeLists.txt  main.cpp
Module 24/Tracking/: CMakeLists.txt  main.cpp
Module 25/task-1/: CMakeLists.txt
Module 25/task-2/: CMakeLists.txt
Module 26/Task 1/: main.cpp
Module 26/Task-2/: CMakeLists.txt  main.cpp
Module 26/window/: CMakeLists.txt  main.cpp
Module 27/CompanysWork/: CMakeLists.txt
Module 27/GeometricShapes/: CMakeLists.txt  main.cpp
Module 27/VillageElf/: CMakeLists.txt  main.cpp
Module 27/WorksOfTheCompany/: CMakeLists.txt  main.cpp
Module 28/SimulationOfAnOnlineRestaurantKitchen/: CMakeLists.txt  main.cpp
Module 28/SimulationOfTheStationOperation/: CMakeLists.txt  main.cpp
Module 28/Task-1/: CMakeLists.txt  main.cpp
Module 29/SuperDog/: CMakeLists.txt  main.cpp
Module 29/SuperDog 2/: CMakeLists.txt  main.cpp
Module 30/CapturingTheTitleOfAWebPage/: CMakeLists.txt  main.cpp
Module 30/QueriesWithArguments/: CMakeLists.txt  main.cpp
Module 30/UserRequests/: CMakeLists.txt  main.cpp
Module 31/GraphClassImplementation/: CMakeLists.txt  main.cpp
Module 31/SmartPointerImplementation/: CMakeLists.txt  main.cpp
Module 32/CompanyDataModelOnProtobuf/: CMakeLists.txt  record.pb.cc  record.pb.h  record.proto
Module 32/InformationAboutTheFilmFromTheFilmPortal/: CMakeLists.txt  main.cpp
Module 32/InformationAboutTheFilmFromTheFilmPortal/nlohmann_json/: Makefile
Module 32/MovieDataAnalysis/: CMakeLists.txt  cinema_base.json  main.cpp
Module 33/DataRegistryOnTemplates/: CMakeLists.txt  main.cpp
Module 33/FishingGame/: CMakeLists.txt  main.cpp
Module 33/ShoppingCartOperation/: CMakeLists.txt  main.cpp
Module 33/TheArithmeticMeanNumberInTheArray/: CMakeLists.txt  main.cpp
Module 33/task-1/: CMakeLists.txt  main.cpp
Module 34/Test/: CMakeLists.txt  main.cpp
Module 34/TestV2/: CMakeLists.txt
Module 35/Task-1/: CMakeLists.txt  main.cpp
Module 35/Task-2/: main.cpp
Module 35/Task-3/: main.cpp
Module 36/Task/: CMakeLists.txt  main.cpp  settings.cpp  settings.h
Module 36/Task-1/: CMakeLists.txt  main.cpp
Module 36/Test-Lesson-3/: CMakeLists.txt  main.cpp
Module 37/GraphicalCalculator/: CMakeLists.txt  calculator.cpp  calculator.h  calculator.ui  main.cpp
Module 37/TVRemoteControl/: CMakeLists.txt  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  src.qrc
Module 37/VideoPlayerInQML/: CMakeLists.txt  Main.qml  main.cpp  qml.qrc
Module 38/BlurEffect/: CMakeLists.txt  imageblurer.cpp  imageblurer.h  imageblurer.ui  main.cpp  src.qrc
Module 38/ButtonWithSound/: CMakeLists.txt  main.cpp  src.qrc
Module 38/ButtonWithSound/src/: settings.cpp  settings.h
Module 38/HtmlEditor/: CMakeLists.txt  htmleditor.cpp  htmleditor.h  htmleditor.ui  main.cpp  src.qrc
Module 38/Task-1/: CMakeLists.txt  main.cpp  mybutton.cpp  mybutton.h  mybutton.qrc  mybutton.ui
Module 39/: widget.cpp  widget.h
Module 39/Task-1/: CMakeLists.txt  Main.qml  main.cpp
Module 39/task-2/: CMakeLists.txt  Widget.qrc  widget.ui
old-modul/Ceaser/: CMakeLists.txt  main.cpp
old-modul/CoffeeMachine_myVersion/: CoffeeMachine_myVersion.cpp  CoffeeMachine_myVersion.sln  CoffeeMachine_myVersion.vcxproj  CoffeeMachine_myVersion.vcxproj.filters
old-modul/ComparisonOfLongRealNumbers/: CMakeLists.txt  main.cpp
old-modul/Email/: CMakeLists.txt  main.cpp
old-modul/MechanicalPiano/: CMakeLists.txt  main.cpp
old-modul/SeaBattle/: CMakeLists.txt  main.cpp
old-modul/SeriesOfNumbers/: CMakeLists.txt  main.cpp
old-modul/SmartHome/: CMakeLists.txt  main.cpp
old-modul/Sorting/: main.cpp
old-modul/Task-1/: main.cpp
(+75 files in other folders)
